# Yoki

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.MD  SECURITY.md  server.toml
.github/workflows/: ci.yml  release.yml
crates/minecraft_packet/: Cargo.toml
crates/minecraft_packet/src/: connection.rs  lib.rs
crates/minecraft_packet/src/packet/: mod.rs  raw.rs
crates/minecraft_packet/src/packets/: mod.rs
crates/minecraft_packet/src/packets/configuration/: acknowledge_finish_configuration.rs  client_information.rs  finish_configuration.rs  mod.rs  plugin_message.rs
crates/minecraft_packet/src/packets/handshaking/: handshake.rs  mod.rs
crates/minecraft_packet/src/packets/login/: cookie_response_login.rs  encryption_response.rs  login_acknowledged.rs  login_plugin_response.rs  login_start.rs  login_success.rs  mod.rs
crates/minecraft_packet/src/packets/play/: login.rs  mod.rs
crates/minecraft_packet/src/packets/play/data/: death_location.rs  mod.rs  position.rs
crates/minecraft_packet/src/packets/status/: mod.rs  ping_request.rs  ping_response.rs  pong_response.rs  status_request.rs  status_response.rs
crates/minecraft_protocol/: Cargo.toml
crates/minecraft_protocol/src/: lib.rs  state.rs
crates/minecraft_protocol/src/packet_serializer/: encode_packet.rs  mod.rs
crates/protocol_version/: Cargo.toml
crates/protocol_version/src/: protocol_version.rs
crates/takumi_binutils/: Cargo.toml
crates/takumi_binutils/src/: reader.rs
crates/takumi_macros/: Cargo.toml
crates/takumi_macros/src/: attrs.rs  expand.rs  lib.rs  packet_in.rs  packet_out.rs  packet_report.rs
crates/yoki_binutils/: Cargo.toml
crates/yoki_binutils/src/: binary_error.rs  binary_reader.rs  binary_writer.rs  error.rs  lib.rs  protocol.rs  writer.rs
crates/yoki_binutils/src/data_types/: bool.rs  f64.rs  i32.rs  i64.rs  i8.rs  mod.rs  option.rs  optional.rs  string.rs  u16.rs  u8.rs  uuid.rs  var_int.rs  vec.rs
crates/yoki_identifier/: Cargo.toml
crates/yoki_identifier/src/: error.rs  identifier.rs  lib.rs  protocol.rs
crates/yoki_macros/: Cargo.toml
crates/yoki_macros/src/: attrs.rs  lib.rs  packet_in.rs  packet_out.rs  packet_report.rs
data/: .gitignore  README.md  package.json  tsconfig.json
data/src/: generate.ts
data/src/fetch/: serverJar.ts
takumi/: Cargo.toml
takumi/src/: main.rs
takumi/src/handlers/: configuration.rs
takumi/src/handlers/login/: login_acknowledged.rs
takumi/src/handlers/status/: ping_request.rs  status_request.rs
takumi/src/server/: batch.rs  mod.rs  packet_registry.rs
yoki/: Cargo.toml
yoki/src/: cli.rs  lib.rs  main.rs
yoki/src/configuration/: mod.rs  motd.rs  server.rs
yoki/src/handlers/: configuration.rs  handshake.rs
yoki/src/handlers/login/: login_acknowledged.rs  login_start.rs  mod.rs
yoki/src/handlers/status/: ping_request.rs  status_request.rs
yoki/src/server/: batch.rs  client_state.rs  game_profile.rs  mod.rs  packet_handler.rs  packet_registry.rs  server_state.rs
yoki/src/server_state/: mod.rs
