[workspace]
members = [
    "yoki",
    "crates/minecraft_packet",
    "crates/yoki_macros",
    "crates/minecraft_protocol",
    "crates/yoki_binutils", "crates/protocol_version",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
