[workspace]
members = [
    "yoki",
    "crates/minecraft_packet",
    "crates/minecraft_protocol",
    "crates/yoki_macros",
    "crates/yoki_binutils",
    "crates/yoki_identifier",
    "crates/protocol_version",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
strum_macros = { version = "0.28" }