[package]
name = "yoki"
version = "0.1.0"
edition = "2024"

[lib]
name = "yoki"
path = "src/lib.rs"

[[bin]]
name = "yoki"
path = "src/main.rs"

[dependencies]
minecraft_packet = { path = "../crates/minecraft_packet" }
minecraft_protocol = { path = "../crates/minecraft_protocol" }
yoki_macros = { path = "../crates/yoki_macros" }
yoki_binutils = { path = "../crates/yoki_binutils" }
protocol_version = { path = "../crates/protocol_version" }
tokio = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }