[package]
name = "minecraft_packet"
version = "0.1.0"
edition = "2024"

[dependencies]
yoki_macros = { path = "../yoki_macros" }
yoki_binutils = { path = "../yoki_binutils" }
yoki_identifier = { path = "../yoki_identifier" }
minecraft_protocol = { path = "../minecraft_protocol" }
protocol_version = { path = "../protocol_version" }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
uuid = { workspace = true }
